# BatchFileRename

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: linux_build.yml  macos_build.yml  windows_build.yml
docs/: release_notes.md
scripts/js/: package.json  plugin-dot-case.js  plugin-dot-case.test.js  plugin-dotify.js  plugin-to-lower-case.js  plugin-to-lower-case.test.js  plugin-to-sequence.js  plugin-to-sequence.test.js  plugin-to-upper-case.js  plugin-to-upper-case.test.js  pnpm-lock.yaml  test-plugin-dotify.js  test-utils.js  utils.js
scripts/ts/: change-version.ts
src/: App.tsx  BatchEditor.tsx  Dashboard.tsx  Footer.tsx  ItemTypeIcon.tsx  NotificationBar.tsx  Settings.tsx  SourceEditor.tsx  TargetEditor.tsx  Tools.tsx  Unified.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  controller.rs  lib.rs  main.rs  plugins.rs  protocol.rs
src/lib/: PluginRunner.ts  Protocol.ts
