[package]
name = "batch-file-rename"
version = "0.1.0"
description = "A batch file rename GUI application with split view for both source and target files."
authors = ["Sam Cao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "dialog-all",
  "clipboard-all",
  "fs-all",
  "window-all",
  "os-all",
  "global-shortcut-all",
  "cli",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.22"
once_cell = "1.19.0"
anyhow = "1.0.86"
env_logger = "0.11.5"
uuid = { version = "1.10.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
